--- a/04_scrollama/01_structure.html
+++ b/04_scrollama/01_structure.html
@@ -12,209 +12,57 @@
 
 <body>
 
+
 	<main>
+
+			<!-- header -->
 		<section id='intro'>
 			<h1 class='intro__hed'>Überschrift</h1>
 			<p class='intro__dek'>
-				Start scrolling to see how it works.
+				Subtitle
 			</p>
 		</section>
 
+	<!-- here starts the textual content, divided into multiple steps that later will trigger animations-->
 		<section id='scrolly'>
-
 			<article>
 				<div class='step' data-step='1'>
-					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+					<p>Text für den ersten Paragraph: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 				</div>
 				<div class='step' data-step='2'>
-					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+					<p>Text für den zweiten Paragraph: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 				</div>
 				<div class='step' data-step='3'>
-					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+					<p>Text für den dritten Paragraph: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 				</div>
 				<div class='step' data-step='4'>
-					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+					<p>Text für den vierten Paragraph: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 				</div>
 			</article>
 
+
+	<!-- this is where we define our visualization-->
 			<figure>
 				<svg id="visualization" width="100%" height="100%"></svg>
-
 			</figure>
 		</section>
 
-		<section id='outro'></section>
+
+		<section id='outro'>
+	<!-- space for an outro-->
+		</section>
 	</main>
 
-	<!-- <div class='debug'></div> -->
+	<!-- we load all necessary scripts for the library, including d3 and scrollama-->
 	<script src='https://unpkg.com/d3@5.9.1/dist/d3.min.js'></script>
 	<script src='https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js'></script>
-	<script src='../stickyfill.min.js'></script>
-	<script src='../scrollama.min.js'></script>
-	<script>
-		// using d3 for convenience
-		var main = d3.select('main')
-		var scrolly = main.select('#scrolly');
-		var figure = d3.select("figure")
-		var svg = d3.select("#visualization")
-		var article = scrolly.select('article');
-		var step = article.selectAll('.step');
-
-		// initialize the scrollama
-		var scroller = scrollama();
-
-		// generic window resize listener event
-		function handleResize() {
-			// 1. update height of step elements
-
-			var figureHeight = window.innerHeight - 100
-			var figureMarginTop = (window.innerHeight - figureHeight) -50
-
-			figure
-				.style('height', figureHeight + 'px')
-				.style('top', figureMarginTop + 'px');
+	<script src='lib/stickyfill.min.js'></script>
+	<script src='lib/scrollama.min.js'></script>
 
 
-			// 3. tell scrollama to update new element dimensions
-			scroller.resize();
-		}
+		<!-- this line loads our own script-->
+			<script src='script01.js'></script>
 
-		// scrollama event handlers
-		function handleStepEnter(response) {
-			// response = { element, direction, index }
-
-			if (response.index == 0){
-				d3.select("#berlinMap").select("#mitte").selectAll("polygon").transition().duration(1200).style("fill", "black")
-			}else if (response.index == 1){
-				d3.select("#berlinMap").select("#mitte").selectAll("polygon").transition().duration(1200).style("fill", "red")
-			}
-
-			// add color to current step only
-			step.classed('is-active', function (d, i) {
-				return i === response.index;
-			})
-
-
-					}
-
-
-
-		function handleStepExit(response) {
-			// response = { element, direction, index }
-			console.log('exit', response);
-			// remove color from current step
-		//	response.element.classList.remove('is-active');
-		}
-
-
-		function handleStepProgress(response) {
-			console.log(response)
-			console.log(response.progress)
-
-			var colorScale = d3.scaleLinear()
-				.domain([0,1,2,3,4])
-				.range(["rgb(179, 208, 166)","rgb(166, 202, 208)","rgb(208, 172, 166)","rgb(206, 166, 208)","rgb(207, 208, 166)"])
-
-			// update graphic based on step
-
-				var colorProgress = response.index + response.progress
-
-				svg.style("background-color", colorScale(colorProgress))
-
-				if (response.index == 1){
-					var rectProgress = Math.floor(response.progress*100)
-					d3.selectAll("rect").filter(function(d,i){return i < rectProgress}).style("opacity", "1")
-					d3.selectAll("rect").filter(function(d,i){return i >= rectProgress}).style("opacity", "0")
-					d3.selectAll("rect").style("fill", "black")
-				}else if (response.index == 2){
-							d3.selectAll("rect").style("fill", function(d){return d.favColor})
-						}else if (response.index == 3){
-							var rectProgress = Math.floor(response.progress*100)
-							d3.selectAll("rect").filter(function(d,i){return i < rectProgress}).style("opacity", "0")
-							d3.selectAll("rect").filter(function(d,i){return i >= rectProgress}).style("opacity", "1")
-
-												}
-
-
-
-	//	d3.select(response.element).select('p').text(d3.format('.1%')(response.progress))
-		}
-
-
-
-
-
-		function setupStickyfill() {
-			d3.selectAll('.sticky').each(function () {
-				Stickyfill.add(this);
-			});
-		}
-
-		function init() {
-			setupStickyfill();
-
-			// 1. force a resize on load to ensure proper dimensions are sent to scrollama
-			handleResize();
-
-			// 2. setup the scroller passing options
-			// 		this will also initialize trigger observations
-			// 3. bind scrollama event handlers (this can be chained like below)
-			scroller.setup({
-				step: '#scrolly article .step',
-				offset: 0.2,
-				progress: true,
-				debug: true,
-			})
-			.onStepEnter(handleStepEnter)
-			.onStepProgress(handleStepProgress)
-			.onStepExit(handleStepExit)
-
-
-
-			// setup resize event
-			window.addEventListener('resize', handleResize);
-		}
-
-		// kick things off
-		init();
-
-
-
-
-
-		var marginLeft = 50,
-				marginTop = marginLeft
-
-		visG = svg.append("g").attr("class", "visG").attr("transform", function(){return `translate(${marginLeft}, ${marginTop})`})
-
-
-		var rectangles = visG.selectAll("rect")
-		var xPos = 0
-
-		rectangles
-		.data(datensatz)
-		.enter()
-		.append("rect")
-		.attr("width", "20")
-		.attr("height", "20")
-		.style("fill", "black")
-		.style("opacity", "0")
-		.attr("y", function(d,i){
-			return Math.floor(i/10)*30
-		})
-		.attr("x", function(d,i){
-			if(i % 10 == 0){
-				xPos = 0
-			}else{xPos++}
-			return xPos*30
-		})
-
-
-
-
-
-
-	</script>
 </body>
 
 </html>
