--- a/04_scrollama/01_structure.html
+++ b/04_scrollama/01_structure.html
@@ -18,8 +18,13 @@
 		<!-- header -->
 		<section id="intro">
 			<h1 class="intro__hed">Überschrift</h1>
-			<p class="intro__dek">
-				Subtitle
+			<p>
+				This is just a basic structure to teach you the basic concepts of Scrollama. You can change the layout in every way you want. It's only important to use the same classes/id's in the scrolly section as in the javascript-part.
+				Besides that, here just some more text to demonstrate the stickyness of the content:</p>
+
+				<p>Vor einem großen Walde wohnte ein armer Holzhacker mit seiner Frau und seinen zwei Kindern;
+				das Bübchen hieß Hänsel und das Mädchen Gretel. Er hatte wenig zu beißen und zu brechen, und einmal, als große Teuerung ins Land kam, konnte er auch das täglich Brot nicht mehr schaffen.
+				Wie er sich nun Abends im Bett Gedanken machte und sich vor Sorgen herum wälzte, seufzte er und sprach zu seiner Frau 'was soll aus uns werden?
 			</p>
 		</section>
 
@@ -57,7 +62,7 @@
 
 
 		<section id="outro">
-			<!-- space for an outro-->
+<p>Footer of our tutorial</p>
 		</section>
 	</main>
 
