--- a/04_scrollama/02_structure.html
+++ b/04_scrollama/02_structure.html
@@ -60,9 +60,7 @@
 						voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 				</div>
 				<div class="step" data-step="4">
-					<p>Text für den vierten Paragraph: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
-						rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
-						voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+					<p>Text für den vierten Paragraph: Wir wollen jetzt irgendwas erst bei einem Mausklick in unserem Text verändern. Klicke <span id="clickhier">hier</span> um das Hallo Welt anzupassen!</p>
 				</div>
 			</article>
 
@@ -173,7 +171,7 @@
 
 
 	<!-- this line loads our own script-->
-	<script src="script08.js"></script>
+	<script src="script09.js"></script>
 
 </body>
 
