add scale example

--- a/02_d3-basics/index.html
+++ b/02_d3-basics/index.html
@@ -11,7 +11,7 @@
 <p></p>
 <footer>
   <script src="https://d3js.org/d3.v4.min.js"></script>
-	<script src="main2.js"></script>
+	<script src="main.js"></script>
 </footer>
 </body>
 </html>
