--- a/02_d3-basics/index.html
+++ b/02_d3-basics/index.html
@@ -6,12 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 </head>
 <body>
-	<svg width="720" height="120">
+	<svg width="1000" height="120">
 	</svg>
 <p></p>
 <footer>
   <script src="https://d3js.org/d3.v4.min.js"></script>
-	<script src="main.js"></script>
+	<script src="main2.js"></script>
 </footer>
 </body>
 </html>
