--- a/02_d3-basics/index.html
+++ b/02_d3-basics/index.html
@@ -7,11 +7,14 @@
 </head>
 <body>
 	<svg width="1000" height="120">
+		<circle cx="40" cy="60" r="10"></circle>
+		<circle cx="80" cy="60" r="10"></circle>
+		<circle cx="120" cy="60" r="10"></circle>
 	</svg>
 <p></p>
 <footer>
   <script src="https://d3js.org/d3.v4.min.js"></script>
-	<script src="main2.js"></script>
+	<script src="main.js"></script>
 </footer>
 </body>
 </html>
